--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "image-size": "^1.0.1",
+    "glob": "^7.2.0",
     "next": "12.0.10",
+    "probe-image-size": "^7.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
