--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.0.10",
     "probe-image-size": "^7.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.30.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
