--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   app:
-    image: picture-browser:0.0.24
+    image: picture-browser:latest
     ports:
      - 3000:3000
     # environment:
