--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "atomic-sleep": "^1.0.0",
     "glob": "^7.2.0",
     "next": "12.0.10",
     "probe-image-size": "^7.2.3",
