--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "probe-image-size": "^7.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-spinners": "^0.11.0",
     "sharp": "^0.30.1"
   },
   "devDependencies": {
