--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.2",
     "atomic-sleep": "^1.0.0",
     "glob": "^7.2.0",
     "next": "12.0.10",
@@ -18,7 +19,11 @@
     "sharp": "^0.30.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.19",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "prisma": "^3.9.2",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
