--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-IMAGE_FOLDER=data
+IMAGE_FOLDER=data/files
 IMAGE_BASE=http://localhost:8080
 
 # This was inserted by `prisma init`:
@@ -8,4 +8,4 @@ IMAGE_BASE=http://localhost:8080
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB (Preview) and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:${INIT_CWD}/picture-browser/picture-browser.db"
+DATABASE_URL="file:${INIT_CWD}/data/db/cr.db"
