--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - .\data:/usr/share/nginx/html
+      - .\data\files:/usr/share/nginx/html
