--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/**/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# test data
+/public/data*
+/data
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
+
+# dist
+/*.tar
+
+# generated data
+/.pp
+temp
+
+# persistent data
+/picture-browser/*
