--- a/packages/client/.env
+++ b/packages/client/.env
@@ -8,4 +8,4 @@ IMAGE_BASE=http://localhost:8080
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB (Preview) and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:${INIT_CWD}/data/db/cr.db"
+DATABASE_URL="file:${INIT_CWD}/packages/client/data/db/cr.db"
