--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nrwl/node": "14.5.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.5.1",
+    "@types/express": "^4.17.13",
     "@types/hbs": "^4.0.1",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
