--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^4.1.1",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
@@ -39,6 +40,7 @@
     "jest": "27.5.1",
     "nx": "14.5.1",
     "prettier": "^2.6.2",
+    "prisma": "^4.1.1",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
