--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,8 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# data
 *.db
 *.db-journal
+/apps/app/src/assets/data/*/*.*
+!/apps/app/src/assets/data/*/.gitkeep
