--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.1.1",
+    "glob": "^8.0.3",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
@@ -30,6 +31,7 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.5.1",
     "@types/express": "^4.17.13",
+    "@types/glob": "^7.2.0",
     "@types/hbs": "^4.0.1",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
